# ECCE-persephone

./: .gitignore  Pipfile
access/: quot_sim2.py
assets/maps/: europe.geo.json
core/clustering/: cluster_sizes.py
core/data/: _utils.py  confidence_intervals.py  labels.py  multi_bin_tree.py  ts_data.py
core/distributions/: bernoulli.py  dist.py  ecdf.py  excess_likelihood.py  fit_cdf.py  gpd.py  mecdf.py  pipe.py  poisson.py  sged.py  sgpd.py  trend.py
core/mathematics/: correlations.py  functions.py  harmonics.py  inversion.py
core/optimization/: harmonics.py  interpolation.py  mecdf.py  piecewise.py
core/random/: ar_processes.py  bortot_gaetan.py  multi_markov_gaussian.py
cpp/bintree/: .rendered.bintree.cpp  bintree.h  pybind11_wrapper.cpp  rectangle.cpp  rectangle.h  splitters.cpp  splitters.h  test.cpp
cythonized/ar_processes/: ar_processes.c  ar_processes.html  ar_processes.pyx
cythonized/bintree/: lr.pyx  mbst.c  mbst.html  mbst.pyx
cythonized/cdf_of_mcdf/: cdf_of_mcdf.c  cdf_of_mcdf.html  cdf_of_mcdf.pyx
cythonized/kde/: beta_kde.pyx
cythonized/mecdf/: mecdf.pyx
cythonized/tasks/: setup.py
plots/: annual.py  harmonic_diagnostic_plot.py  histograms.py  mapplot.py  scales.py
protocol/cdf_of_mcdf/: cdf_of_mcdf.py  cdf_of_mcdf_arbirtrary.py  utils.py
protocol/edof/: edof.py  edof_utils.py
scripts/acceleration/: cdf_of_cdf.py
scripts/diagnostic/: bin_tree_bug.py
scripts/material/: inverse_sampling_method.py  pce.py  (+3 more)
tools/: CMakeLists.txt  tasks.py
utils/: arrays.py  constants.py  iter.py  mpp.py  paths.py  strings.py  timer.py
(+111 files in other folders)
